--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "google-maps-react": "^2.0.2",
+    "material-ui": "^0.20.2"
   },
   "scripts": {
     "start": "react-scripts start",
