--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
     "uuid": "^3.3.2",
-    "google-maps-react": "^2.0.2"
+    "google-maps-react": "^2.0.2",
+    "react-geocode": "0.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
