--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "emoji-mart": "^2.6.1",
     "firebase": "^5.3.0",
+    "google-maps-react": "^2.0.2",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-avatar-editor": "^11.0.4",
     "react-color": "^2.14.1",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.4.1",
+    "react-geocode": "0.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
@@ -18,9 +21,7 @@
     "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
-    "uuid": "^3.3.2",
-    "google-maps-react": "^2.0.2",
-    "react-geocode": "0.1.2"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
