--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-avatar-editor": "^11.0.4",
     "react-color": "^2.14.1",
     "react-datetime": "^2.16.3",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.4.1",
     "react-geocode": "0.1.2",
     "react-redux": "^5.0.7",
