--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.4.1",
     "react-geocode": "0.1.2",
+    "react-icons": "^3.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
