--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "emoji-mart": "^2.6.1",
     "firebase": "^5.3.0",
     "google-maps-react": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "react": "^16.4.1",
