--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "nodemailer": "^6.1.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
