--- a/functions/package.json
+++ b/functions/package.json
@@ -10,9 +10,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.1",
     "nodemailer": "^6.1.1"
+  },
+  "engines": {
+    "node": "8"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
